Patient's invoices summary

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -1594,4 +1594,39 @@ angal.xmpp.isnowoffline                                                        =
 angal.xmpp.isnowonline                                                         = is now online
 angal.xmpp.sendfile                                                            = Send File
 angal.xmpp.user                                                                = User
-angal.xmpp.usersinfo                                                           = user's info
+angal.xmpp.usersinfo                                                           = user's info7
+angal.admission.thispatienthasapendingbillcreateanother                        = This Patient has already a pending bill. Do you want to create another?
+angal.report.patientbill.billn                                                 = Bill N.
+angal.report.patientbill.cashier                                               = Cashier
+angal.report.patientbill.designation                                           = Designation
+angal.report.patientbill.detailsinvoice                                        = Details invoice
+angal.report.patientbill.unitprice                                             = Unit price
+angal.report.billsreport.amount                                                = Amount
+angal.report.billsreport.billid                                                = Bill ID
+angal.report.billsreport.date                                                  = Date
+angal.report.billsreport.lastpayment                                           = Last payment
+angal.report.billsreport.notpaid                                               = Not Paid
+angal.report.billsreport.paid                                                  = Paid
+angal.report.billsreport.patient                                               = Patient
+angal.report.billsreport.quantity                                              = Quantity
+angal.report.billsreport.title                                                 = BILLS REPORT FROM
+angal.report.billsreport.byreduction.title                                     = BILLS REPORT BY REDUCTION FROM
+angal.report.billsreport.byuser.title                                          = BILLS REPORT BY USER FROM
+angal.report.billsreport.to                                                    = TO
+angal.report.billsreport.to2                                                   = To
+angal.report.billsreport.totals                                                = TOTALS
+angal.report.billsreportuserallindate.date                                     = DATE
+angal.report.oh009inpatientreport.code                                         = CODE
+angal.report.moh717monthlyworkloadreportforhospitalspage2b.total               = Total
+angal.report.patientbillextended.discount                                      = Discount
+angal.report.billsreportuserallindate.total                                    = TOTAL
+angal.report.patientbillpayments.notpaid                                       = To paid:
+angal.report.patientbillpayments.paid                                          = PAID:
+angal.report.diseaseslist.page                                                 = Page
+angal.report.diseaseslist.of                                                   = of
+angal.report.patientbillextendedtxt.patn                                       = PAT. N.
+angal.report.patientbillextendedtxt.time                                       = x 
+angal.report.patientbillpaymentssubtxt.payments                                = Payments
+angal.billbrowser.billnotyetclosed                                             = This bill is still open
+angal.admission.thereismorethanonependingbillforthispatientcontinuecreateanother  = There is at least one open invoice for this patient. Do you want to create another one?
+angal.admission.thereismorethanonependingbillforthispatientopenlastopenenedbill = Do you want the system to open the last opened invoice?
