--- a/bundle/language_fr.properties
+++ b/bundle/language_fr.properties
@@ -1454,3 +1454,36 @@ angal.ward.telephone                                                          = 
 angal.ward.telephoneedit                                                      = TÃ©lÃ©phone
 angal.ward.wardsbrowser                                                       = Liste Rayons
 angal.ward.wardwithpharmacy                                                   = Garde avec pharmacie
+angal.admission.thispatienthasapendingbillcreateanother                       = Ce Patient a encore une facture ouverte. Voulez-vous cr\u00E9er une autre?
+angal.report.patientbill.cashier                                              = Caissier(e):
+angal.report.patientbill.designation                                          = D\u00E9signation
+angal.report.patientbill.detailsinvoice                                       = D\u00E9tails facture
+angal.report.patientbill.unitprice                                            = Prix unitaire
+angal.report.patientbill.billn                                                = Facture N.
+angal.report.billsreport.amount                                               = Montant
+angal.report.billsreport.billid                                               = ID Facture
+angal.report.billsreport.date                                                 = Date
+angal.report.billsreport.lastpayment                                          = Dernier paiement
+angal.report.billsreport.notpaid                                              = Non pay\u00E9
+angal.report.billsreport.paid                                                 = Pay\u00E9
+angal.report.billsreport.patient                                              = Patient
+angal.report.billsreport.quantity                                             = Quantit\u00E9
+angal.report.billsreport.title                                                = RAPPORT DES FACTURES DU
+angal.report.billsreport.byreduction.title                                    = RAPPORT DES FACTURES PAR REDUCTION DU
+angal.report.billsreport.byuser.title                                         = RAPPORT DES FACTURES PAR UTILISATEURS DU
+angal.report.billsreport.to                                                   = A
+angal.report.billsreport.to2                                                  = Au
+angal.report.oh009inpatientreport.code                                        = CODE
+angal.report.moh717monthlyworkloadreportforhospitalspage2b.total              = Total
+angal.report.patientbillextended.discount                                     = Remise
+angal.report.billsreportuserallindate.total                                   = TOTAL
+angal.report.patientbillpayments.paid                                         = Pay\u00E9
+angal.report.patientbillpayments.notpaid                                      = Reste \u00E0 payer
+angal.report.diseaseslist.page                                                = Page
+angal.report.diseaseslist.of                                                  = sur
+angal.report.patientbillextendedtxt.patn                                      = PAT. N.
+angal.report.patientbillextendedtxt.time                                      = x 
+angal.report.patientbillpaymentssubtxt.payments                               = Paiements
+angal.billbrowser.billnotyetclosed                                            = Cette facture est encore ouverte
+angal.admission.thereismorethanonependingbillforthispatientcontinuecreateanother  = Il y a au moins une facture ouverte pour ce patient. Voulez-vous cr\u00E9er une autre?
+angal.admission.thereismorethanonependingbillforthispatientopenlastopenenedbill = Voulez-vous que le système ouvre la dernière facture non cloturée?
