Fixed Statistics reports
- provided three reports: all, pending and monthly
- changed numbering

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -236,6 +236,7 @@ angal.billbrowser.month                                                         
 angal.billbrowser.newbill                                                        = New Bill
 angal.billbrowser.notpaid                                                        = Not Paid:
 angal.billbrowser.openbillsreport                                                = opened bills report
+angal.billbrowser.openedbillslist                                                = Pending Bills
 angal.billbrowser.othermonth                                                     = other Month...
 angal.billbrowser.patient                                                        = Patient
 angal.billbrowser.patientID                                                      = Pat.ID
@@ -1451,8 +1452,9 @@ angal.sql.thedatacouldnotbesaved                                                
 angal.sql.thedatahasbeenupdatedbysomeoneelse                                     = The data has been updated by someone else
 angal.sql.thedataisnomorepresent                                                 = Couldn't find the data, it has probably been deleted.
 angal.sql.theselecteditemisstillusedsomewhere                                    = The selected item is still used somewhere
-angal.stat.allIncomes                                                            = OH023B1 - Revenues, Incomes & Receivables
-angal.stat.allIncomesmonth                                                       = OH023B2 - Revenues, Incomes & Receivables (Month)
+angal.stat.allIncomes                                                            = OH011A - Revenues, Incomes & Receivables (All)
+angal.stat.allIncomesmonth                                                       = OH011C - Revenues, Incomes & Receivables (Month)
+angal.stat.allIncomespending                                                     = OH011B - Revenues, Incomes & Receivables (Pending)
 angal.stat.april                                                                 = April
 angal.stat.august                                                                = August
 angal.stat.dailyopdmorbiditysummaryover5                                         = MOH 705A - Over 5 - Daily Outpatient Morbidity Summary Sheet
@@ -1484,8 +1486,6 @@ angal.stat.october                                                              
 angal.stat.opdattendance                                                         = HMIS 105 - Opd attendance
 angal.stat.opdbydiagnosis                                                        = HMIS 105 - Opd by diagnosis
 angal.stat.opdreferrals                                                          = HMIS 105 - Opd referrals
-angal.stat.openedbillslist                                                       = OH023A1 - Opened Bills list
-angal.stat.openedbillslistmonth                                                  = OH023A2 - Opened Bills list (month)
 angal.stat.outpatientcount                                                       = OH005 - Count outpatient
 angal.stat.outpatientdiagnoses                                                   = OH006 - Count outpatient diagnosis
 angal.stat.outpatientreport                                                      = OH010 - OutPatient Report
