--- a/bundle/language_fr.properties
+++ b/bundle/language_fr.properties
@@ -228,6 +228,7 @@ angal.billbrowser.lastpayment                                                   
 angal.billbrowser.month                                                          = Mois
 angal.billbrowser.newbill                                                        = Novelle facture
 angal.billbrowser.notpaid                                                        = Pas Payè:
+angal.billbrowser.openedbillslist                                                = Liste des factures ouvertes
 angal.billbrowser.othermonth                                                     = Autre  Mois...
 angal.billbrowser.patient                                                        = patient
 angal.billbrowser.patientID                                                      = Pat.ID
@@ -1320,8 +1321,9 @@ angal.sql.thedatacouldnotbesaved                                                
 angal.sql.thedatahasbeenupdatedbysomeoneelse                                     = Les données out été ajournées par d'autres 
 angal.sql.thedataisnomorepresent                                                 = Il est impossible de trouver la donnée. Elle été probablement effacée.
 angal.sql.theselecteditemisstillusedsomewhere                                    = l'élément sélectionné est encore utilisé quelque part
-angal.stat.allIncomes                                                            = OH023B1 - Revenues, Incomes & Receivables
-angal.stat.allIncomesmonth                                                       = OH023B2 - Revenues, Incomes & Receivables (Mois)
+angal.stat.allIncomes                                                            = OH011A - Chiffres, Revenus & Créances (Tous)
+angal.stat.allIncomesmonth                                                       = OH011C - Revenues, Incomes & Receivables (Mois)
+angal.stat.allIncomespending                                                     = OH011B- Chiffres, Revenus & Créances (Ouverts)
 angal.stat.april                                                                 = Avril
 angal.stat.august                                                                = Août
 angal.stat.dailyopdmorbiditysummaryover5                                         = OPD journalier de sortie- état patologique superieur à 5
@@ -1352,8 +1354,6 @@ angal.stat.october                                                              
 angal.stat.opdattendance                                                         = HMIS 105 - Présences DDP
 angal.stat.opdbydiagnosis                                                        = HMIS 105 - DDP pour diagnostic
 angal.stat.opdreferrals                                                          = HMIS 105 - DDP references
-angal.stat.openedbillslist                                                       = OH023A1 - Liste des factures ouvertes
-angal.stat.openedbillslistmonth                                                  = OH023A2 - Liste des factures ouvertes (Mois)
 angal.stat.outpatientcount                                                       = OH005 - Compter les visualisations externes
 angal.stat.outpatientdiagnoses                                                   = OH006 - Comptez diagnostic ambulatoire
 angal.stat.pageonecensusinfo                                                     = HMIS 108 - page 1 - 1. info Recensement
