Fixed Accounting module:
- Fixed pending table dataset when selecting patients
- Added patient's statement report
- Fixed patient grouped report

--- a/bundle/language_ar.properties
+++ b/bundle/language_ar.properties
@@ -231,6 +231,7 @@ angal.billbrowser.period                                                      = 
 angal.billbrowser.periodm                                                     = الفترة
 angal.billbrowser.pleaseselectabillfirst                                      = الرجاء تحديد الفاتورة اولا
 angal.billbrowser.pleaseselectamonth                                          = يرجى تحديد شهر
+angal.billbrowser.pleaseselectapatient                                        = الرجاء اختيار المريض
 angal.billbrowser.pleaseselectareport                                         = الرجاء تحديد تقرير
 angal.billbrowser.receipt                                                     = وصل
 angal.billbrowser.report                                                      = تقرير
