--- a/bundle/language_de.properties
+++ b/bundle/language_de.properties
@@ -229,6 +229,7 @@ angal.billbrowser.period                                                      = 
 angal.billbrowser.periodm                                                     = PERIOD:
 angal.billbrowser.pleaseselectabillfirst                                      = Please select a Bill first
 angal.billbrowser.pleaseselectamonth                                          = Please select a month
+angal.billbrowser.pleaseselectapatient                                        = Please select a patient
 angal.billbrowser.pleaseselectareport                                         = Please select a report
 angal.billbrowser.receipt                                                     = Receipt
 angal.billbrowser.report                                                      = Report
