--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -240,11 +240,13 @@ angal.billbrowser.openedbillslist                                               
 angal.billbrowser.othermonth                                                     = other Month...
 angal.billbrowser.patient                                                        = Patient
 angal.billbrowser.patientID                                                      = Pat.ID
+angal.billbrowser.patientstatement                                               = Patient's Statement
 angal.billbrowser.pending                                                        = Pending
 angal.billbrowser.period                                                         = Period
 angal.billbrowser.periodm                                                        = PERIOD:
 angal.billbrowser.pleaseselectabillfirst                                         = Please select a Bill first
 angal.billbrowser.pleaseselectamonth                                             = Please select a month
+angal.billbrowser.pleaseselectapatient                                           = Please select a patient
 angal.billbrowser.pleaseselectareport                                            = Please select a report
 angal.billbrowser.receipt                                                        = Receipt
 angal.billbrowser.report                                                         = Report
@@ -1419,7 +1421,7 @@ angal.report.patientbill.unitprice                                              
 angal.report.patientbillextended.discount                                        = Discount
 angal.report.patientbillextendedtxt.patn                                         = PAT. N.
 angal.report.patientbillextendedtxt.time                                         = x 
-angal.report.patientbillpayments.notpaid                                         = To paid:
+angal.report.patientbillpayments.notpaid                                         = To pay:
 angal.report.patientbillpayments.paid                                            = PAID:
 angal.report.patientbillpaymentssubtxt.payments                                  = Payments
 angal.report.patientbillpaymentssubtxt.rest                                      = REST:
