--- a/bundle/language_es.properties
+++ b/bundle/language_es.properties
@@ -239,6 +239,7 @@ angal.billbrowser.period                                                       =
 angal.billbrowser.periodm                                                      = PERÍODO:
 angal.billbrowser.pleaseselectabillfirst                                       = Seleccionar un cuenta anterior
 angal.billbrowser.pleaseselectamonth                                           = Seleccionar un mes
+angal.billbrowser.pleaseselectapatient                                         = Seleccionar un paciente
 angal.billbrowser.pleaseselectareport                                          = Seleccionar un informe
 angal.billbrowser.receipt                                                      = Recibo
 angal.billbrowser.report                                                       = Informe
