--- a/bundle/language_fr.properties
+++ b/bundle/language_fr.properties
@@ -232,11 +232,13 @@ angal.billbrowser.openedbillslist                                               
 angal.billbrowser.othermonth                                                     = Autre  Mois...
 angal.billbrowser.patient                                                        = patient
 angal.billbrowser.patientID                                                      = Pat.ID
+angal.billbrowser.patientstatement                                               = Patient Relevé
 angal.billbrowser.pending                                                        = Attente
 angal.billbrowser.period                                                         = Periode
 angal.billbrowser.periodm                                                        = PERIODE:
 angal.billbrowser.pleaseselectabillfirst                                         = Avant selectionnez une facture
 angal.billbrowser.pleaseselectamonth                                             = Selectionnez un mois
+angal.billbrowser.pleaseselectapatient                                           = Please select a patient
 angal.billbrowser.pleaseselectareport                                            = Selectionnez un report
 angal.billbrowser.receipt                                                        = Reçu
 angal.billbrowser.report                                                         = Rapport
