--- a/bundle/language_it.properties
+++ b/bundle/language_it.properties
@@ -236,11 +236,13 @@ angal.billbrowser.openedbillslist                                               
 angal.billbrowser.othermonth                                                    = altro Mese...
 angal.billbrowser.patient                                                       = Paziente
 angal.billbrowser.patientID                                                     = Pat.ID
+angal.billbrowser.patientstatement                                              = Estratto Pazient
 angal.billbrowser.pending                                                       = Sospeso
 angal.billbrowser.period                                                        = Periodo
 angal.billbrowser.periodm                                                       = PERIODO:
 angal.billbrowser.pleaseselectabillfirst                                        = Selezionare un conto prima
 angal.billbrowser.pleaseselectamonth                                            = Selezionare un mese
+angal.billbrowser.pleaseselectapatient                                          = Selezionare un paziente
 angal.billbrowser.pleaseselectareport                                           = Selezionare un report
 angal.billbrowser.receipt                                                       = Ricevuta
 angal.billbrowser.report                                                        = Report
