--- a/bundle/language_pt.properties
+++ b/bundle/language_pt.properties
@@ -238,6 +238,7 @@ angal.billbrowser.period                                                       =
 angal.billbrowser.periodm                                                      = PERÍODO:
 angal.billbrowser.pleaseselectabillfirst                                       = Por favor selecione antes uma fatura
 angal.billbrowser.pleaseselectamonth                                           = Por favor selecione um relatório
+angal.billbrowser.pleaseselectapatient                                         = Por favor selecione um paciente
 angal.billbrowser.pleaseselectareport                                          = Por favor selecione um relatório
 angal.billbrowser.receipt                                                      = Recibo
 angal.billbrowser.report                                                       = Relatório
