--- a/bundle/language_sw.properties
+++ b/bundle/language_sw.properties
@@ -233,6 +233,7 @@ angal.billbrowser.period                                                      = 
 angal.billbrowser.periodm                                                     = KIPINDI: 
 angal.billbrowser.pleaseselectabillfirst                                      = Tafadhali chagua ankara kwanza
 angal.billbrowser.pleaseselectamonth                                          = Tafadhali chagua mwezi mmoja 
+angal.billbrowser.pleaseselectapatient                                        = Tafadhali chagua mgonjwa
 angal.billbrowser.pleaseselectareport                                         = Tafadhali chagua ripoti moja 
 angal.billbrowser.receipt                                                     = Risiti
 angal.billbrowser.report                                                      = Ripoti 
