improve the Visit model in order to handle the next date of appointment in OPD

--- a/bundle/language_fr.properties
+++ b/bundle/language_fr.properties
@@ -1018,6 +1018,8 @@ angal.opd.selectsex                                                             
 angal.opd.sex                                                                    = Sexe
 angal.opd.sexm                                                                   = SEXE
 angal.opd.visitdate                                                              = date visites
+angal.opd.nextvisitdate                                                          = Date de prochain rendez-vous
+angal.opd.notpasseddate                                                          = Vous ne pouvez pas entrer une date passée pour la prochaine visite
 angal.operation.allm                                                             = TOUS
 angal.operation.codetoolongmaxchars                                              = Code trop long (max 10 caractère)
 angal.operation.deleteoperation                                                  = Eliminez l'intervention
