added fields in language file

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -1207,6 +1207,13 @@ angal.patient.alive                                                             
 angal.patient.birthdate                                                          = Birth Date
 angal.patient.bloodtype                                                          = Blood type
 angal.patient.bloodtype.unknown                                                  = Unknown
+angal.patient.profession                                                         = Profession
+angal.patient.maritalstatus                                                      = Marital Status
+angal.patient.maritalstatusunknown                                               = Unknown
+angal.patient.maritalstatusdivorced                                              = Divorced
+angal.patient.maritalstatuswidowed                                               = Widowed
+angal.patient.maritalstatusmarried                                               = Married
+angal.patient.maritalstatussingle                                                = Single
 angal.patient.city                                                               = City
 angal.patient.confirmage                                                         = Confirm age?
 angal.patient.confirmdeletion                                                    = Confirm deletion
