--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -261,6 +261,7 @@ angal.billbrowser.todaym                                                        
 angal.billbrowser.update                                                         = Update
 angal.common.agepattern                                                          = {0}y {1}m {2}d
 angal.common.cancel                                                              = Cancel
+angal.common.print                                                               = Print
 angal.common.close                                                               = Close
 angal.common.code                                                                = Code
 angal.common.codealreadyinuse                                                    = Code already in use
@@ -767,6 +768,10 @@ angal.medicalstockward.outcome.destination                                      
 angal.medicalstockward.outcomes                                                  = Outcomes
 angal.medicalstockward.packets                                                   = packets
 angal.medicalstockward.patient                                                   = Patient
+angal.medicalstockward.patient.date                                              = Date
+angal.medicalstockward.patient.decription                                        = Drug
+angal.medicalstockward.patient.quantity                                          = Quantity
+angal.medicalstockward.patient.units                                             = Units
 angal.medicalstockward.pieces                                                    = \ pieces
 angal.medicalstockward.pleaseselectanoutcomesmovementfirst                       = Please select an Outcomes movement first
 angal.medicalstockward.purpose                                                   = Purpose
@@ -1274,6 +1279,7 @@ angal.patient.yes                                                               
 angal.patientbill.find                                                           = Find
 angal.patientfolder.tab.exams                                                    = Exams
 angal.patientfolder.tab.operations                                               = Operations
+angal.patientfolder.tab.drugs													 = Drugs
 angal.patvac.age                                                                 = Age
 angal.patvac.agefrom                                                             = Age From:
 angal.patvac.agefrommustbelowerthanageto                                         = 'Age from' must be lower than 'Age to'
