--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -849,6 +849,7 @@ angal.medtype.pleaseinsertavaliddescription                                     
 angal.menu.accounting                                                            = Accounting
 angal.menu.admchart                                                              = Admission Chart
 angal.menu.admission                                                             = Admission/Patient
+angal.menu.visits                                                             	 = Visits
 angal.menu.admtype                                                               = AdmissionType
 angal.menu.agetype                                                               = Age Type
 angal.menu.all                                                                   = ALL
@@ -856,6 +857,7 @@ angal.menu.billsmanager                                                         
 angal.menu.btn.accounting                                                        = Accounting
 angal.menu.btn.admchart                                                          = Admission Chart
 angal.menu.btn.admission                                                         = Admission/Patient
+angal.menu.btn.visits                                                            = Visits
 angal.menu.btn.admtype                                                           = Admission Type
 angal.menu.btn.agetype                                                           = Age Type
 angal.menu.btn.billsmanager                                                      = Bills manager
@@ -1628,6 +1630,9 @@ angal.video.resumestream                                                        
 angal.video.setfullscreen                                                        = Set fullscreen mode
 angal.video.shootaphoto                                                          = Take a picture
 angal.visit.reminderm                                                            = REMINDER
+angal.visit.visitfor                                                             = Visits for
+angal.visit.visittoday                                                           = Visits Today
+angal.visit.visittomorrow                                                        = Visits Tomorrow
 angal.ward.beds                                                                  = BEDS
 angal.ward.bedsedit                                                              = Number of beds *
 angal.ward.bedsnumbermustbepositive                                              = Beds number must be positive
