--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -75,6 +75,8 @@ angal.admission.male                                                            
 angal.admission.malnutrition                                                     = Malnutrition
 angal.admission.malnutritioncontrol                                              = Malnutrition control
 angal.admission.maternity                                                        = MATERNITY
+angal.admission.profession                                                         = Profession
+angal.admission.maritalstatus                                                      = Marital Status
 angal.admission.merge                                                            = Merge
 angal.admission.motherisalive                                                    = Mother is alive  
 angal.admission.motherisdead                                                     = Mother is dead 
