--- a/bundle/language_ar.properties
+++ b/bundle/language_ar.properties
@@ -77,6 +77,8 @@ angal.admission.levelisunknown                                                = 
 angal.admission.male                                                          = ذكر
 angal.admission.malnutrition                                                  = سوء التغذية
 angal.admission.malnutritioncontrol                                           = مكافحة سوء التغذية
+angal.admission.profession                                                    = المهنة
+angal.admission.maritalstatus                                                 = الحالة المدنية
 angal.admission.merge                                                         = دمج
 angal.admission.motherisalive                                                 = الأب على قيد الحياة
 angal.admission.motherisdead                                                  = أم متوفاة
@@ -1039,6 +1041,13 @@ angal.patient.alive                                                           = 
 angal.patient.birthdate                                                       = تاريخ الميلاد
 angal.patient.bloodtype                                                       = فصيلة الدم
 angal.patient.bloodtype.unknown                                               = غير معروف
+angal.patient.profession                                                      = المهنة
+angal.patient.maritalstatus                                                   = الحالة المدنية
+angal.patient.maritalstatusunknown                                            = غير معروف
+angal.patient.maritalstatusdivorced                                           = مطلق 
+angal.patient.maritalstatuswidowed                                            = مترمل 
+angal.patient.maritalstatusmarried                                            = متزوج
+angal.patient.maritalstatussingle                                             = أعزب
 angal.patient.city                                                            = المدينة
 angal.patient.confirmage                                                      = تأكيد العمر؟
 angal.patient.confirmdeletion                                                 = تأكيد الحذف
