convert profession field to dropdown

--- a/bundle/language_ar.properties
+++ b/bundle/language_ar.properties
@@ -1042,6 +1042,18 @@ angal.patient.birthdate                                                       = 
 angal.patient.bloodtype                                                       = فصيلة الدم
 angal.patient.bloodtype.unknown                                               = غير معروف
 angal.patient.profession                                                      = المهنة
+angal.patient.profession.farming                                              = زراعة
+angal.patient.profession.construction                                         = بناء
+angal.patient.profession.mining                                               = تعدين
+angal.patient.profession.engineering                                          = هندسة
+angal.patient.profession.medicine                                             = طب
+angal.patient.profession.foodhospitality                                      = الغذاء والضيافة
+angal.patient.profession.homemaker                                            = ربة منزل
+angal.patient.profession.mechanic                                             = ميكانيكي
+angal.patient.profession.business                                             = أعمال
+angal.patient.profession.janitorial                                           = خدمات تنظيف
+angal.patient.profession.other                                                = مهنة أخرى
+angal.patient.profession.unknown                                              = غير معروف
 angal.patient.maritalstatus                                                   = الحالة المدنية
 angal.patient.maritalstatusunknown                                            = غير معروف
 angal.patient.maritalstatusdivorced                                           = مطلق 
