--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -1210,6 +1210,18 @@ angal.patient.birthdate                                                         
 angal.patient.bloodtype                                                          = Blood type
 angal.patient.bloodtype.unknown                                                  = Unknown
 angal.patient.profession                                                         = Profession
+angal.patient.profession.farming                                                 = Farming
+angal.patient.profession.construction                                            = Construction
+angal.patient.profession.mining                                                  = Mining
+angal.patient.profession.engineering                                             = Engineering
+angal.patient.profession.medicine                                                = Medicine
+angal.patient.profession.foodhospitality                                         = Food/Hospitality
+angal.patient.profession.homemaker                                               = Homemaker
+angal.patient.profession.mechanic                                                = Mechanic
+angal.patient.profession.business                                                = Business
+angal.patient.profession.janitorial                                              = Janitorial Services
+angal.patient.profession.other                                                   = Other
+angal.patient.profession.unknown                                                 = Unknown
 angal.patient.maritalstatus                                                      = Marital Status
 angal.patient.maritalstatusunknown                                               = Unknown
 angal.patient.maritalstatusdivorced                                              = Divorced
